mejoras de interfaz
Ahora los elementos aparecen centrados en la pantalla.

Se observan alertas para que la interacción con el jugador sea más dinámica.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel='stylesheet' type='text/css' media='screen' href='node_modules/bootstrap/dist/css/bootstrap.min.css'>
 </head>
 <body>
-    <main class="vh-100">
-        <div id="tablero" class="container h-75">
-            <div class="row h-100">
+    <main class="vh-100 d-flex align-items-center justify-content-center">
+        <div id="tablero" class="container h-75 d-flex flex-column">
+            <div class="row flex-grow-1">
                 <div id = "0" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1 d-flex align-items-center justify-content-center"><p class="m-0">?</p></div>
                 <div id = "1" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1 d-flex align-items-center justify-content-center"><p class="m-0">?</p></div>
                 <div id = "2" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1 d-flex align-items-center justify-content-center"><p class="m-0">?</p></div>
