--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel='stylesheet' type='text/css' media='screen' href='node_modules/bootstrap/dist/css/bootstrap.min.css'>
 </head>
 <body>
-    <main class="vh-100 d-flex align-items-center justify-content-center">
-        <div id="tablero" class="container h-75 d-flex flex-column">
+    <main class="vh-100 d-flex flex-column align-items-center justify-content-center bg-dark">
+        <div id="tablero" class="container h-75 d-flex bg-success">
             <div class="row flex-grow-1">
                 <div id = "0" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1 d-flex align-items-center justify-content-center"><p class="m-0">?</p></div>
                 <div id = "1" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1 d-flex align-items-center justify-content-center"><p class="m-0">?</p></div>
@@ -25,8 +25,8 @@
                 <div id = "10" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1 d-flex align-items-center justify-content-center"><p class="m-0">?</p></div>
                 <div id = "11" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1 d-flex align-items-center justify-content-center"><p class="m-0">?</p></div>
             </div>
-            <div id="alerta-estado" class="alert alert-primary">Juga YA!</div>
         </div>
+        <div id="alerta-estado" class="container alert alert-primary">Juga YA!</div>
     </main>
     <script src="main.js"></script>
 </body>
