agrego pantalla de inicio y fin
Para agregar la funcionalidad de volver a jugar el juego,  y de ofrecer al jugador la posibilidad de arrancar el juego cuando quiera.

--- a/index.html
+++ b/index.html
@@ -5,28 +5,36 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Memotest!</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='node_modules/bootstrap/dist/css/bootstrap.min.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
 </head>
 <body>
-    <main class="vh-100 d-flex flex-column align-items-center justify-content-center bg-dark">
-        <div id="tablero" class="container h-75 d-flex bg-success">
-            <div class="row flex-grow-1">
-                <div id = "0" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
-                <div id = "1" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
-                <div id = "2" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
-                <div id = "3" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
-                <div id = "4" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
-                <div id = "5" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
-                <div id = "6" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
-                <div id = "7" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
-                <div id = "8" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
-                <div id = "9" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
-                <div id = "10" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
-                <div id = "11" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
+    <main class="bg-light">
+        <div id="pantalla-inicio" class="container vh-100">
+            <div>
+                <p class="alert alert-success">Bienvenido al juego del MEMOTEST!<br> Pulsa JUGAR para comenzar</p>
+                <button type="button" class="btn btn-primary">Jugar</button>
             </div>
         </div>
-        <div id="alerta-estado" class="container alert alert-primary">Juga YA!</div>
+        <div id="pantalla-juego" class="container vh-100 oculto">
+            <div id="tablero" class="container d-flex">
+                <div class="row flex-grow-1">
+                    <div id = "0" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
+                    <div id = "1" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
+                    <div id = "2" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
+                    <div id = "3" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
+                    <div id = "4" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
+                    <div id = "5" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
+                    <div id = "6" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
+                    <div id = "7" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
+                    <div id = "8" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
+                    <div id = "9" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
+                    <div id = "10" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
+                    <div id = "11" class="tarjeta border col-6 col-sm-4 col-lg-3 flex-grow-1">?</div>
+                </div>
+            </div>
+            <div id="alerta-estado" class="container alert alert-primary">Juga YA!</div>
+        </div>
     </main>
     <script src="main.js"></script>
 </body>
